--- a/style.css
+++ b/style.css
@@ -139,4 +139,29 @@ body {
     text-transform: uppercase;
     display: inline-block;
   }
-  
+
+  .outline {
+    background-color: #343434bf;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    z-index: -20;
+  }
+
+  .circle {
+    background-color: #f47321;
+    width: 400px;
+    height: 400px;
+    left: -12%;
+    border-radius: 50%;
+    position: fixed;
+    bottom: -15%;
+    margin: 0;
+    padding: 0;
+    z-index: -20;
+    overflow: hidden;
+  }
