Random Image on Background.

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   word-wrap: break-word;
   color: #eee;
   background: #353535;
-  background-image: url(./background.jpg);
+  background-image: url(https://source.unsplash.com/1920x1080/?landscape);
 }
 
 h1 {
