navbar with button

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  padding: 0;
   font-family: "Roboto", sans-serif;
 }
 
@@ -13,6 +14,174 @@ body {
   justify-content: center;
   gap: 2rem;
   padding: 1rem;
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
+nav {
+  background: #222;
+  padding: 0 15px;
+}
+a {
+  color: white;
+  text-decoration: none;
+}
+.menu,
+.submenu {
+  list-style-type: none;
+}
+.logo {
+  font-size: 20px;
+  padding: 7.5px 10px 7.5px 0;
+}
+.item {
+  padding: 10px;
+}
+.item.button {
+  padding: 9px 5px;
+}
+.item:not(.button) a:hover,
+.item a:hover::after {
+  color: #ccc;
+}
+
+/* Mobile menu */
+.menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+.menu li a {
+  display: block;
+  padding: 15px 5px;
+}
+.menu li.subitem a {
+  padding: 15px;
+}
+.toggle {
+  order: 1;
+  font-size: 20px;
+}
+.item.button {
+  order: 2;
+}
+.item {
+  order: 3;
+  width: 100%;
+  text-align: center;
+  display: none;
+}
+.active .item {
+  display: block;
+}
+.button.secondary {
+  /* divider between buttons and menu links */
+  border-bottom: 1px #444 solid;
+}
+
+/* Submenu up from mobile screens */
+.submenu {
+  display: none;
+}
+.submenu-active .submenu {
+  display: block;
+}
+.has-submenu i {
+  font-size: 12px;
+}
+.has-submenu > a::after {
+  font-family: "Font Awesome 5 Free";
+  font-size: 12px;
+  line-height: 16px;
+  font-weight: 900;
+  content: "\f078";
+  color: white;
+  padding-left: 5px;
+}
+.subitem a {
+  padding: 10px 15px;
+}
+.submenu-active {
+  background-color: #111;
+  border-radius: 3px;
+}
+
+/* Tablet menu */
+@media all and (min-width: 700px) {
+  .menu {
+    justify-content: center;
+  }
+  .logo {
+    flex: 1;
+  }
+  .item.button {
+    width: auto;
+    order: 1;
+    display: block;
+  }
+  .toggle {
+    flex: 1;
+    text-align: right;
+    order: 2;
+  }
+  /* Button up from tablet screen */
+  .menu li.button a {
+    padding: 10px 15px;
+    margin: 5px 0;
+  }
+  .button a {
+    background: #0080ff;
+    border: 1px royalblue solid;
+  }
+  .button.secondary {
+    border: 0;
+  }
+  .button.secondary a {
+    background: transparent;
+    border: 1px #0080ff solid;
+  }
+  .button a:hover {
+    text-decoration: none;
+  }
+  .button:not(.secondary) a:hover {
+    background: royalblue;
+    border-color: darkblue;
+  }
+}
+
+/* Desktop menu */
+@media all and (min-width: 960px) {
+  .menu {
+    align-items: flex-start;
+    flex-wrap: nowrap;
+    background: none;
+  }
+  .logo {
+    order: 0;
+  }
+  .item {
+    order: 1;
+    position: relative;
+    display: block;
+    width: auto;
+  }
+  .button {
+    order: 2;
+  }
+  .submenu-active .submenu {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 68px;
+    background: #111;
+  }
+  .toggle {
+    display: none;
+  }
+  .submenu-active {
+    border-radius: 0;
+  }
 }
 
 .carousel {
@@ -42,7 +211,7 @@ body {
 }
 /*card styles*/
 
-.card{
+.card {
   width: 250px;
   height: 350px;
   /* color: white; */
@@ -52,8 +221,9 @@ body {
   position: relative;
 }
 
-.card.bg-3{
-  background:rgba(255,255,255,0.9) url('./pexels-anton-makarenko-1078057.jpg');
+.card.bg-3 {
+  background: rgba(255, 255, 255, 0.9)
+    url("./pexels-anton-makarenko-1078057.jpg");
   background-size: cover;
 }
 
@@ -63,26 +233,26 @@ body {
   flex-direction: column;
   gap: 10px;
   width: 100%;
-  height:100%;
+  height: 100%;
   /* position: relative; */
   opacity: 0;
   transition: opacity 500ms ease;
 }
 
-.bg-1{
-  background:url('./pexels-darwis-alwan-1808329.jpg');
+.bg-1 {
+  background: url("./pexels-darwis-alwan-1808329.jpg");
   background-size: cover;
 }
 
-.bg-2{
-  background:url('./pexels-eberhard-grossgasteiger-1064162.jpg');
+.bg-2 {
+  background: url("./pexels-eberhard-grossgasteiger-1064162.jpg");
   background-size: cover;
 }
 
 .goto-btn {
   text-decoration: none;
   color: black;
-  background-color: #1DA1F2;
+  background-color: #1da1f2;
   font-size: 1.1rem;
   padding: 0.25em 0.5em;
   border-radius: 6px;
@@ -98,7 +268,7 @@ body {
   outline: 4px solid #1187d192;
 }
 
-.card:hover .card-content{
+.card:hover .card-content {
   opacity: 1;
   background-color: rgba(255, 255, 255, 0.253);
   -webkit-backdrop-filter: blur(3px);
