--- a/components/CountdownTimer.html
+++ b/components/CountdownTimer.html
@@ -36,6 +36,8 @@
         <div class="outline"></div>
         <div class="circle"></div>
         <h1>CountDown Setter</h1>
+        <button type="button" onclick="document.getElementById('demo').innerHTML = Date()"> Click me to display current Date and Time.</button>
+        <p id="demo"></p>
     </div>
     <div class="take-date">
         <form>
