--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-color: #343434bf;
+  background: linear-gradient(90deg, rgb(193 193 193) 0%, rgb(58 58 173) 35%, rgba(0,212,255,1) 100%);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,14 +16,17 @@ body {
   padding: 1rem;
   font-family: sans-serif;
   font-size: 16px;
-
+  margin: 0px;
+  padding: 0px;
+  padding-bottom: 20px;
+}
 
 nav {
   background: #222;
   padding: 0 15px;
 }
 a {
-  color: white;
+  color: #fff4f4;
   text-decoration: none;
 }
 .menu,
@@ -44,7 +47,6 @@ a {
 .item a:hover::after {
   color: #ccc;
 }
-
 
 /* Mobile menu */
 .menu {
@@ -310,4 +312,3 @@ a {
     opacity: 1;
   }
 }
-
