--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;
+  padding: 0;ind
   font-family: "Roboto", sans-serif;
 }
 
@@ -29,9 +29,16 @@ a {
   color: #fff4f4;
   text-decoration: none;
 }
+.has-submenu {
+  z-index: 100;
+}
 .menu,
 .submenu {
   list-style-type: none;
+}
+.submenu-title {
+  cursor: pointer;
+  color: #fff4f4;
 }
 .logo {
   font-size: 20px;
