--- a/style.css
+++ b/style.css
@@ -23,6 +23,15 @@ body {
 
 nav {
   background: #222;
+  background-image: linear-gradient(
+    90deg,
+    #0c79ed 20%,
+    #13547a 50%,
+    #049ea6 70%,
+    #09c19c 75%,
+    #0afcac 80%
+  );
+  padding: 0 15px;
   padding: 0 15px;
 }
 a {
@@ -53,6 +62,9 @@ a {
 .item:not(.button) a:hover,
 .item a:hover::after {
   color: #ccc;
+  color: #ed0cb5;
+  text-shadow: 0 0 5px #ed0cb5, 0 0 10px #ed0cb5, 0 0 15px #ed0cb5,
+    0 0 20px #ed0cb5, 0 0 25px #0073e6, 0 0 30px #0073e6, 0 0 35px #0073e6;
 }
 
 /* Mobile menu */
