Added set and reset features in countdown timer

--- a/components/CountdownTimer.html
+++ b/components/CountdownTimer.html
@@ -43,6 +43,7 @@
         <form>
             <label class="Countdown-date" for="countdown">Choose Date : </label>
             <input class="Countdown-date" id="date-c" type="date">
+            <button type="button" id="reset">Reset</button>
         </form>
     </div>
     <!-- <div id="countdown">
