--- a/components/style.css
+++ b/components/style.css
@@ -1,17 +1,54 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,300);
 
-/* body {
-  font-family: "Roboto", sans-serif;
-  background: #d2eaf1;
-} */
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+/*Nav Bar*/
+.navbar {
+  background-color: #e6976f;
+  height: 10vh;
+  width: 100%;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.navbar-name{
+  font-size: 45px;
+  text-decoration: none;
+  color: #000;
+}
+.navbar-nav{
+  display: flex;
+  list-style: none;
+  font-size: 25px;
+  margin-left: 30px;
+}
+.nav-item{
+  padding: 5px;
+  margin: 5px;
+}
+.nav-link{
+  text-decoration: none;
+  color: #000;
+}
+.nav-link:hover{
+  color: #fff;
+  text-decoration: underline;
+}
+.navbar-name:hover{
+  color: #fff;
+}
+/* nav bar ends */
 .wrapper {
   display: flex;
   justify-content: space-evenly;
   margin-top: 100px;
 }
 .circle-wrap {
-  /* margin: 150px auto; */
   width: 150px;
   height: 150px;
   background: #fefcff;
@@ -58,7 +95,7 @@
 
 .mask.full,
 .circle .fill {
-  /* animation: fill ease-in-out 3s; */
+  animation: fill ease-in-out 3s;
   transform: rotate(180deg);
 }
 
@@ -84,12 +121,11 @@ h1 {
   font-size: 4rem;
   color: #f47321;
   text-shadow: 2px 2px #ff0000;
+  margin-bottom: 30px;
 }
 .take-date {
   text-align: center;
   color: #f47321;
-  /* text-shadow: 2px 2px #ff0000; */
-  /* font-size: 20px; */
 }
 .Countdown-date {
   font-size: 20px;
@@ -242,19 +278,6 @@ h1 {
   z-index: -20;
 }
 
-/* .circle {
-  background-color: #f47321;
-  width: 400px;
-  height: 400px;
-  left: -12%;
-  border-radius: 50%;
-  position: fixed;
-  bottom: -15%;
-  margin: 0;
-  padding: 0;
-  z-index: -20;
-  overflow: hidden;
-} */
 
 @media (max-width: 1024px) {
   .circle {
@@ -295,9 +318,4 @@ h1 {
     margin-top: 40%;
   }
 }
-.navbar {
-  background-color: #e6976f;
-}
-.nav-item {
-  font-size: 120%;
-}
+
