--- a/components/CountdownTimer.html
+++ b/components/CountdownTimer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown Timer</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../Countdown.png">
     <script src="script.js" defer></script>
 </head>
 
