--- a/style.css
+++ b/style.css
@@ -345,3 +345,18 @@ nav {
     opacity: 1;
   }
 }
+
+::-webkit-scrollbar{
+  width: 12px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: aqua;
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: rgb(58 58 173);
+  background-clip: content-box;
+  border: 2px solid transparent;
+  border-radius: 15px;
+}
