--- a/to-doLISt/style.css
+++ b/to-doLISt/style.css
@@ -15,11 +15,12 @@ h1{
 }
 
 .container{
-    margin: 80px auto;
+    margin-left: 800px;
+    margin-top: 80px;
     text-align: center;
-    width: 60%;
-    max-width: 450px;
-    padding: 60px 0;
+    width: 100%;
+    max-width: 500px;
+    padding: 100px 0;
     /* color: white; */
     border: 2px solid gray;
     border-radius: 10px;
@@ -37,9 +38,19 @@ h1{
     margin-bottom: 20px;
 
 }
+/* .task #add-task{
+    width: 40px;
+    height: 50px;
+    
+} */
 .flex-button{
     display: inline;
-    width: 100%;
+    width: 20%;
+    
+}
+.flex-button #add-btn{
+    
+    margin: 5px;
 }
 
 input{
@@ -47,15 +58,18 @@ input{
     border-radius: 10px;
 }
 input[type='text']{
-    width: 70%;
+    width: 50%;
+    margin-top: 10px;
     padding: 5px 10px;
     outline: none;
     font-size: 1.2rem;
-    margin-right: -4px;
+    margin-left: 50px;
     color: rgb(0, 0, 0);
     background-color: #ffffff;
     border-bottom: 1px solid #c3aeaea1;
     cursor:pointer;
+    display: flex;
+    float: left;
 }
 input[type='text']:disabled{
     cursor:default;
@@ -101,12 +115,22 @@ input[type='button']:hover{
 }
 
 .new-tasks{
-    margin: 25px auto;
+    margin-left: 15px;
+    width: 80%;
+}
+.new-tasks #added-task{
+    border-radius: 10px 0px 0px 10px;
+}
+.new-tasks input[type='button']{
+    margin-top: 10px;
+    height: 40px;
+
 }
 .update-task{
-    margin-left: 10px;
+    
     border-radius:0px;
     background-color: #3dc916;
+    
 }
 .rename-task{
     background-color: #e9adad;
@@ -120,12 +144,17 @@ input[type='button']:hover{
 }
 
 .task{
-    width: 92%;
+    width: 100%;
+    height: 50px;
     margin: 10px auto;
     display: flex;
     justify-content: center;
     
 }
+.task-buttons{
+    margin: 100px;
+}
+
 #add-task{
     border-bottom: 1px solid gray;
 }
