--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  padding: 0;ind
+  padding: 0;
   font-family: "Roboto", sans-serif;
 }
 
 body {
   background: linear-gradient(90deg, rgb(193 193 193) 0%, rgb(58 58 173) 35%, rgba(0,212,255,1) 100%);
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
   justify-content: center;
   gap: 2rem;
@@ -21,34 +21,37 @@ body {
   padding-bottom: 20px;
 }
 
-nav {
-  background: #222;
-  padding: 0 15px;
-}
 a {
   color: #fff4f4;
   text-decoration: none;
 }
-.has-submenu {
-  z-index: 100;
+
+/* navigation styles */
+#navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.menu,
-.submenu {
-  list-style-type: none;
-}
-.submenu-title {
-  cursor: pointer;
-  color: #fff4f4;
-}
-.logo {
+
+nav {
+  background: #222;
+  padding: 0 15px;
+  height: 80px;
   font-size: 20px;
-  padding: 7.5px 10px 7.5px 0;
 }
+
+.logo-container {
+  color: white;
+}
+
+
+
 .item {
-  padding: 10px;
+  padding: 3px;
 }
 .item.button {
   padding: 9px 5px;
+
 }
 .item:not(.button) a:hover,
 .item a:hover::after {
@@ -58,29 +61,53 @@ a {
 /* Mobile menu */
 .menu {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
   align-items: center;
 }
-.menu li a {
-  display: block;
-  padding: 15px 5px;
+
+.menu li {
+  margin-right: 5px;
+  list-style: none;
 }
-.menu li.subitem a {
-  padding: 15px;
+ul {
+  padding: 0;
 }
-.toggle {
-  order: 1;
-  font-size: 20px;
+
+/* nav inp t form */
+.d-flex {
+  align-self: center;
+  align-items: center;
 }
+#form1 {
+  min-width: 150px;
+  height: 30px;
+}
+
+select {
+  border: none;
+  align-self: center;
+  color: white;
+  background: #222;
+  padding: 0 5px;
+}
+
+#select-container1 {
+  max-width: 110px;
+}
+#select-container2{
+  max-width: 80px;
+}
+
+
+  /* TODO! add display block to login btn */
+
 .item.button {
   order: 2;
 }
 .item {
-  order: 3;
+  /* order: 3; */
   width: 100%;
   text-align: center;
-  display: none;
+  /* display: none; */
 }
 .active .item {
   display: block;
@@ -90,109 +117,114 @@ a {
   border-bottom: 1px #444 solid;
 }
 
-/* Submenu up from mobile screens */
-.submenu {
-  display: none;
-}
-.submenu-active .submenu {
+/* hamburger */
+#bar {
   display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background: white;
 }
-.has-submenu i {
-  font-size: 12px;
+
+
+#hamburger {
+  display: none;
+  cursor: pointer;
 }
-.has-submenu > a::after {
-  font-family: "Font Awesome 5 Free";
-  font-size: 12px;
-  line-height: 16px;
-  font-weight: 900;
-  content: "\f078";
-  color: white;
-  padding-left: 5px;
+
+
+#hamburger.active {
+  background: inherit;
+  width: inherit;
+  padding-right: inherit;
+  right: 0;
+  position: absolute;
 }
-.subitem a {
-  padding: 10px 15px;
+
+
+@media(max-width: 950px) {
+  /* Hamburger Style */
+  #hamburger {
+      display: block;
+  }
+
+  #hamburger.active :nth-child(2) {
+      opacity: 0;
+  }
+
+  #hamburger.active :nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+  }
+  
+  #hamburger.active :nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .menu {
+      position: fixed;
+      left: -100%;
+      top: 78px;
+      gap: 0;
+      flex-direction: column;
+      background-color: #222;
+      width: 100%;
+      text-align: center;
+      transition: 0.3s;
+      z-index: 1;
+  }
+
+  .item {
+      margin: 16px auto;
+      width: 100%;
+  }
+  .item a {
+      color: white;
+      font-size: 20px;
+      letter-spacing: 4px;
+      font-weight: bolder;
+      font-family: 'crimson text';        
+  }
+
+  .menu.active {
+      left: 0;
+  }
+
 }
-.submenu-active {
-  background-color: #111;
-  border-radius: 3px;
-}
+
 
 /* Tablet menu */
 @media all and (min-width: 700px) {
-  .menu {
-    justify-content: center;
-  }
+ 
   .logo {
     flex: 1;
   }
   .item.button {
     width: auto;
     order: 1;
-    display: block;
-  }
-  .toggle {
-    flex: 1;
-    text-align: right;
-    order: 2;
-  }
-  /* Button up from tablet screen */
-  .menu li.button a {
-    padding: 10px 15px;
-    margin: 5px 0;
-  }
-  .button a {
-    background: #0080ff;
-    border: 1px royalblue solid;
-  }
-  .button.secondary {
-    border: 0;
-  }
-  .button.secondary a {
-    background: transparent;
-    border: 1px #0080ff solid;
-  }
-  .button a:hover {
-    text-decoration: none;
-  }
-  .button:not(.secondary) a:hover {
-    background: royalblue;
-    border-color: darkblue;
-  }
+  } 
 }
 
-/* Desktop menu */
-@media all and (min-width: 960px) {
-  .menu {
-    align-items: flex-start;
-    flex-wrap: nowrap;
-    background: none;
-  }
-  .logo {
-    order: 0;
-  }
-  .item {
-    order: 1;
-    position: relative;
-    display: block;
-    width: auto;
-  }
-  .button {
-    order: 2;
-  }
-  .submenu-active .submenu {
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 68px;
-    background: #111;
-  }
-  .toggle {
-    display: none;
-  }
-  .submenu-active {
-    border-radius: 0;
-  }
+/* Button up from tablet screen */
+.menu li.button a {
+padding: 10px 15px;
+margin: 5px 0;
 }
+.button {
+  min-width: 100px;
+  background: #0080ff;
+  border: 1px royalblue solid;
+}
+
+.button:hover {
+  background: royalblue;
+}
+
+.button a:hover {
+  color: black;
+}
+
 
 .carousel {
  text-align: center;
@@ -229,10 +261,8 @@ a {
 
 .active {
   display: block;
-  background-color: white;
   animation: fade 1.4s;
   object-fit: contain;
-  width: 75%;
   aspect-ratio: 16/9;
   text-align: center;
   margin: auto;
@@ -250,7 +280,7 @@ a {
 .card {
   width: 250px;
   height: 350px;
-  /* color: white; */
+  color: white;
   border-radius: 0.5rem;
   background-color: white;
   overflow: hidden;
