--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-image: url(background_pattern.png);
+  background-image: url(pattern_background.png);
   display: flex;
   flex-direction: column;
   justify-content: center;
