--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ nav {
   height: 15vh;
 }
 
+.sticky {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
 .menu a {
   color: white;
   font-size: 20px;
